--- a/test.tex
+++ b/test.tex
@@ -50,15 +50,15 @@
 	\end{enumerate}
 }
 
-\newcommand{\ayudantia}{{\sc Ayudantía <numero>}}
-\newcommand{\tituloayu}{<titulo>}
-\newcommand{\fecha}{<fecha>}
+\newcommand{\ayudantia}{{\sc Ayudantía 7}}
+\newcommand{\tituloayu}{Integrales impropias y series}
+\newcommand{\fecha}{2018-05-07}
 \newcommand{\alumno}{Ignacio Castañeda - ifcastaneda@uc.cl}
-\newcommand{\sigla}{<sigla>}
-\newcommand{\nombre}{<nombre>}
-\newcommand{\profesor}{<profesor>}
-\newcommand{\ano}{<ano>}
-\newcommand{\semestre}{<semestre>}
+\newcommand{\sigla}{MAT220E}
+\newcommand{\nombre}{Cálculo II}
+\newcommand{\profesor}{Vania Ramirez}
+\newcommand{\ano}{2018}
+\newcommand{\semestre}{1}
 
 \newcommand{\ev}{\Big|}
 \newcommand{\ra}{\rightarrow}
