--- a/2018/1/MAT220E/7.tex
+++ b/2018/1/MAT220E/7.tex
@@ -78,7 +78,7 @@
 \thispagestyle{empty}
 
 \begin{minipage}{2cm}
-	\includegraphics[width=2cm]{..../img/logo.pdf}
+	\includegraphics[width=2cm]{../../../img/logo.pdf}
 	\vspace{0.5cm}
 \end{minipage}
 \begin{minipage}{\linewidth}
