--- a/2018/1/MAT220E/7/solucion.tex
+++ b/2018/1/MAT220E/7/solucion.tex
@@ -100,5 +100,4 @@
 	converge. Evalúe la integral para este valor de $C$.
 \item Determine si las siguientes series convergen o divergen.
 \end{preguntas}
-\end{document
-}
+\end{document}
