--- a/2018/1/MAT220E/7/solucion.tex
+++ b/2018/1/MAT220E/7/solucion.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 7}}
-\newcommand{\tituloayu}{Integrales impropias y series}
+\newcommand{\tituloayu}{Integrales impropias y seriess}
 \newcommand{\fecha}{2018-05-07}
 \newcommand{\alumno}{Ignacio Castañeda - ifcastaneda@uc.cl}
 \newcommand{\sigla}{MAT220E}
