Enunciado de 2018/1/MAT220E/7

--- a/2018/1/MAT220E/7/enunciado.tex
+++ b/2018/1/MAT220E/7/enunciado.tex
@@ -92,6 +92,15 @@
 	\end{tabular}
 \end{minipage}
 
+\begin{center}
+	{\LARGE\bf \ayudantia}\\
+	\vspace{0.1cm}
+	{\tituloayu}\\
+	\vspace{0.1cm}
+	\fecha\\
+	\vspace{0.4cm}
+\end{center}
+
 \begin{preguntas}
 \item Determinar si las siguientes integrales impropias convergen o divergen y calcularlas en caso de que converjan.
 \begin{tasks}(3)
