Enunciado de 2018/1/MAT220E/7

--- a/2018/1/MAT220E/7/enunciado.tex
+++ b/2018/1/MAT220E/7/enunciado.tex
@@ -52,7 +52,7 @@
 
 \newcommand{\ayudantia}{{\sc Ayudantía 7}}
 \newcommand{\tituloayu}{Integrales impropias y series}
-\newcommand{\fecha}{2018-05-07}
+\newcommand{\fecha}{7 de Mayo de 2018}
 \newcommand{\alumno}{Ignacio Castañeda - ifcastaneda@uc.cl}
 \newcommand{\sigla}{MAT220E}
 \newcommand{\nombre}{Cálculo II}
