--- a/2018/1/MAT220E/7/enunciado.tex
+++ b/2018/1/MAT220E/7/enunciado.tex
@@ -102,7 +102,7 @@
 \end{center}
 
 \begin{preguntas}
-\item Determinar si las siguientes integrales impropias convergen o divergen y calcularlas en caso de que converjan.
+\item Determinar si las siguientes impropias convergen o divergen y calcularlas en caso de que converjan.
 \begin{tasks}(3)
 \task $\displaystyle\int_{0}^{3}\dfrac{1}{x\ \sqrt[]{x}}dx$
 \task $\displaystyle\int_{e}^{\infty}\dfrac{1}{xlnx}dx$
@@ -115,9 +115,6 @@
 \item Calcular el volumen de la trompeta entre $1$ y $L$ con la siguiente formula:
 		$$ V = \pi \displaystyle\int_{1}^{L} f(x)^2dx, \quad con\ L \ra \infty$$
 \end{enumerate}
-\item Determinar el valor de la constante $C$ para la cual la integral
-	$$\displaystyle\int_{0}^{\infty} \left( \dfrac{x}{x^2+1} - \dfrac{C}{3x+1}\right)dx$$
-	converge. Evalúe la integral para este valor de $C$.
 \item Determine si las siguientes series convergen o divergen.
 \begin{tasks}(3)
 \task $\sum\limits_{n=1}^{\infty}\dfrac{5n^3}{7n+n^3-1}$
@@ -127,5 +124,8 @@
 \task $\sum\limits_{n=20}^{\infty}\dfrac{1}{nln(n)ln(ln(n))}$
 \task $\sum\limits_{n=1}^{\infty}ln\left(1+\dfrac{1}{n}\right)$
 \end{tasks}
+\item Determinar el valor de la constante $C$ para la cual la integral
+	$$\displaystyle\int_{0}^{\infty} \left( \dfrac{x}{x^2+1} - \dfrac{C}{3x+1}\right)dx$$
+	converge. Evalúe la integral para este valor de $C$.
 \end{preguntas}
 \end{document}
