Enunciado de 2018/1/MAT220E/7

--- a/2018/1/MAT220E/7/enunciado.tex
+++ b/2018/1/MAT220E/7/enunciado.tex
@@ -53,12 +53,13 @@
 \newcommand{\ayudantia}{{\sc Ayudantía 7}}
 \newcommand{\tituloayu}{Integrales impropias y series}
 \newcommand{\fecha}{7 de mayo de 2018}
-\newcommand{\alumno}{Ignacio Castañeda - ifcastaneda@uc.cl}
 \newcommand{\sigla}{MAT220E}
 \newcommand{\nombre}{Cálculo II}
 \newcommand{\profesor}{Vania Ramirez}
 \newcommand{\ano}{2018}
 \newcommand{\semestre}{1}
+\newcommand{\mail}{mat220e@ifcastaneda.cl}
+\newcommand{\alumno}{Ignacio Castañeda - \mail}
 
 \newcommand{\ev}{\Big|}
 \newcommand{\ra}{\rightarrow}
@@ -88,7 +89,7 @@
 		{\sc Facultad de Matemáticas}&
 		Profesor: & \profesor \\
 		{\sc Semestre \ano-\semestre} & Ayudante: & {Ignacio Castañeda}\\
-		& {Mail:} & \texttt{ifcastaneda@uc.cl}
+		& {Mail:} & \texttt{\mail}
 	\end{tabular}
 \end{minipage}
 
