--- a/2018/1/MAT220E/7/solucion.tex
+++ b/2018/1/MAT220E/7/solucion.tex
@@ -103,7 +103,7 @@
 \end{center}
 
 \begin{preguntas}
-\item Determinar si las siguientes impropias convergen o divergen y calcularlas en caso de que converjan.
+\item Determinar si las siguientes integrales impropias convergen o divergen y calcularlas en caso de que converjan.
 \begin{tasks}(3)
 \task $\displaystyle\int_{0}^{3}\dfrac{1}{x\ \sqrt[]{x}}dx$
 \task $\displaystyle\int_{e}^{\infty}\dfrac{1}{xlnx}dx$
