--- a/2018/1/MAT1203/1/enunciado.tex
+++ b/2018/1/MAT1203/1/enunciado.tex
@@ -171,5 +171,47 @@
 	16
 \end{pmatrix}$
 \end{tasks}
+\item Sean los vectores
+		$$
+	v_1 = \begin{pmatrix}
+	2\\
+	1\\
+	5
+\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	-1\\
+	-3\\
+	0
+\end{pmatrix}$$
+\begin{enumerate}[a)]
+\item Buscar un vector $v_3$ que sea perpendicular a $v_1$ y $v_2$ y verificar que efectivamente sea perpendicular a ambos.
+\item Buscar un vector paralelo a $(v_2-v_3)$ y verificar que lo sea
+\item Encontrar un vector perpendicular a $(v_3 + 3v_1)$
+\end{enumerate}
+\item Detereminar si los siguientes vectores son paralelos, perpendiculares u oblicuos
+\begin{tasks}(2)
+\task $$ 
+			\begin{pmatrix}
+			-1\\
+			2\\
+			5
+		\end{pmatrix};\qquad
+			\begin{pmatrix}
+			2\\
+			-4\\
+			-10
+		\end{pmatrix}$$
+\task  $$ 
+			\begin{pmatrix}
+			2\\
+			5\\
+			10
+		\end{pmatrix};\qquad
+			\begin{pmatrix}
+			-3\\
+			8\\
+			-11
+		\end{pmatrix}$$
+\end{tasks}
 \end{preguntas}
 \end{document}
