--- a/2018/1/MAT1203/1/solucion.tex
+++ b/2018/1/MAT1203/1/solucion.tex
@@ -389,5 +389,199 @@
 			Observando las dos primeras componentes de cada vector, vemos que es imposible representar uno en función del otro, por lo que los puntos no son colineales
 \end{enumerate}
 \end{solucion}
+\item Sean los vectores
+		$$
+	v_1 = \begin{pmatrix}
+	2\\
+	1\\
+	5
+\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	-1\\
+	-3\\
+	0
+\end{pmatrix}$$
+\begin{enumerate}[a)]
+\item Buscar un vector $v_3$ que sea perpendicular a $v_1$ y $v_2$ y verificar que efectivamente sea perpendicular a ambos.
+\item Buscar un vector paralelo a $(v_2-v_3)$ y verificar que lo sea
+\item Encontrar un vector perpendicular a $(v_3 + 3v_1)$
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Para que sea perpendicular a ambos, basta definir $v_3 = v_1 \times v_2$, es decir
+			$$v_3 = \begin{pmatrix}
+			2\\
+			1\\
+			5
+			\end{pmatrix} \times \begin{pmatrix}
+			-1\\
+			-3\\
+			0
+			\end{pmatrix} = i (0 + 15) + j (0 + 5) + k(-6 + 1) =\begin{pmatrix}
+			15\\
+			-5\\
+			-5
+			\end{pmatrix} $$
+			Para verificar basta utilizar el producto punto, donde obtendremos que
+			$$v_3 \cdot v_1 = 0$$
+			$$v_3 \cdot v_2 = 0$$
+\item En primer lugar, calculemo el vector $v_2 - v_3$
+			$$v_4 = v_2 - v_3 = \begin{pmatrix}
+			-1\\
+			-3\\
+			0
+			\end{pmatrix} - \begin{pmatrix}
+			15\\
+			-5\\
+			-5
+			\end{pmatrix} = \begin{pmatrix}
+			-16\\
+			2\\
+			5
+			\end{pmatrix}$$
+			Para obtener un vector paralelo, podemos simplemente ponderar el vector por un escalar, como por ejemplo, 2
+			$$v_5 = 2 v_4 = 2 \begin{pmatrix}
+			-16\\
+			2\\
+			5
+			\end{pmatrix} = \begin{pmatrix}
+			-32\\
+			4\\
+			10
+			\end{pmatrix}$$
+			Para verificar utilizaremos el producto cruz, donde obtendremos que
+			$$v_5 \times v_4 = 0$$
+\item Primero calculemos el vector $v_3 + 3v_1$
+			$$v_6 = v_3 + 3v_1 = \begin{pmatrix}
+			15\\
+			-5\\
+			-5
+			\end{pmatrix}  + 3 \begin{pmatrix}
+			2\\
+			1\\
+			5
+			\end{pmatrix} = \begin{pmatrix}
+			21\\
+			-2\\
+			10
+			\end{pmatrix} $$
+			Para obtener un vector perpendicular, podemos hacer producto cruz con cualquier otro vector arbitrario. Para hacer los calculos simples, utilizaremos
+			$$v_7 = \begin{pmatrix}
+			1\\
+			0\\
+			0
+			\end{pmatrix} $$
+			Luego, 
+			$$v_8 = v_6 \times v_7 = \begin{pmatrix}
+			21\\
+			-2\\
+			10
+			\end{pmatrix} \times \begin{pmatrix}
+			1\\
+			0\\
+			0
+			\end{pmatrix} = 10j + 2k = \begin{pmatrix}
+			0\\
+			-10\\
+			2
+			\end{pmatrix}$$
+\end{enumerate}
+\end{solucion}
+\item Detereminar si los siguientes vectores son paralelos, perpendiculares u oblicuos
+\begin{tasks}(2)
+\task $$ 
+			\begin{pmatrix}
+			-1\\
+			2\\
+			5
+		\end{pmatrix};\qquad
+			\begin{pmatrix}
+			2\\
+			-4\\
+			-10
+		\end{pmatrix}$$
+\task  $$ 
+			\begin{pmatrix}
+			2\\
+			5\\
+			10
+		\end{pmatrix};\qquad
+			\begin{pmatrix}
+			-3\\
+			8\\
+			-11
+		\end{pmatrix}$$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $$ 
+			\begin{pmatrix}
+			-1\\
+			2\\
+			5
+			\end{pmatrix};\qquad
+			\begin{pmatrix}
+			2\\
+			-4\\
+			-10
+			\end{pmatrix}$$
+			Si se fijan, es evidente que $v_2 = -2v_1$, por lo que comprobaremos de inmediato con el producto cruz para ver si son paralelos
+			 $$ 
+			\begin{pmatrix}
+			-1\\
+			2\\
+			5
+			\end{pmatrix} \times 
+			\begin{pmatrix}
+			2\\
+			-4\\
+			-10
+			\end{pmatrix} = i (-20 + 20) -j (10 - 10) + k (4 - 4) = \vec{0}$$
+			Por lo que ambos vectores son paralelos
+\item $$ 
+			\begin{pmatrix}
+			2\\
+			5\\
+			10
+			\end{pmatrix};\qquad
+			\begin{pmatrix}
+			-3\\
+			8\\
+			-11
+			\end{pmatrix}$$
+			Comenzaremo probando si son perpendiculares con el producto punto
+			$$ 
+			\begin{pmatrix}
+			2\\
+			5\\
+			10
+			\end{pmatrix} \cdot
+			\begin{pmatrix}
+			-3\\
+			8\\
+			-11
+			\end{pmatrix} = -6 + 40 - 110 = -76$$
+			Como es distinto de cero, vemos que no son perpendiculares.\\
+			Ahora, utilizaremos el producto cruz para ver si son paralelos
+			$$ 
+			\begin{pmatrix}
+			2\\
+			5\\
+			10
+			\end{pmatrix} \times
+			\begin{pmatrix}
+			-3\\
+			8\\
+			-11
+			\end{pmatrix} = i(-55 -80) - j (-22 +30) +k(16 + 15) = \begin{pmatrix}
+			-135\\
+			-8\\
+			31
+			\end{pmatrix}$$
+			Como este no es el vector nulo, tampoco son paralelos. Con esto concluimos que ambos vectores son oblicuos.
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
