Enunciado de 2019/1/MAT1610/1

--- a/2019/1/MAT1610/1/enunciado.tex
+++ b/2019/1/MAT1610/1/enunciado.tex
@@ -115,7 +115,10 @@
 \task $\lim\limits_{x \ra 0} \dfrac{|x|(|x|-x)}{x^2}$
 \task $\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right)$
 \end{tasks}
-\item Aplicando la definición de límite, probar que
+\item Aplicando la definición de límite, demostrar que
 $$\lim\limits_{x \ra 1} \dfrac{x+1}{2} = 2$$
+\item Calcule el siguiente límite, en caso de que exista
+$$ \lim\limits_{x \ra 0} x^2e^{\sin{\frac{1}{x}}} $$
+\textbf{Hint:} \textit{Utilice el teorema del sandwich}
 \end{preguntas}
 \end{document}
