Solución de 2019/1/MAT1610/1

--- a/2019/1/MAT1610/1/solucion.tex
+++ b/2019/1/MAT1610/1/solucion.tex
@@ -128,8 +128,14 @@
 \item 
 \end{enumerate}
 \end{solucion}
-\item Aplicando la definición de límite, probar que
+\item Aplicando la definición de límite, demostrar que
 $$\lim\limits_{x \ra 1} \dfrac{x+1}{2} = 2$$
+\begin{solucion}
+
+\end{solucion}
+\item Calcule el siguiente límite, en caso de que exista
+$$ \lim\limits_{x \ra 0} x^2e^{\sin{\frac{1}{x}}} $$
+\textbf{Hint:} \textit{Utilice el teorema del sandwich}
 \begin{solucion}
 
 \end{solucion}
