--- a/2019/1/MAT1610/1/enunciado.tex
+++ b/2019/1/MAT1610/1/enunciado.tex
@@ -115,10 +115,12 @@
 \task $\lim\limits_{x \ra 0} \dfrac{|x|(|x|-x)}{x^2}$
 \task $\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right)$
 \end{tasks}
+\item Determina $a$ para que el siguiente límite exista:
+$$ \lim\limits_{x \ra 2} \dfrac{x^2+ax+6}{x^2-4} $$
 \item Aplicando la definición de límite, demostrar que
 $$\lim\limits_{x \ra 1} \dfrac{x+1}{2} = 2$$
 \item Calcule el siguiente límite, en caso de que exista
 $$ \lim\limits_{x \ra 0} x^2e^{\sin{\frac{1}{x}}} $$
-\textbf{Hint:} \textit{Utilice el teorema del sandwich}
+\textit{\textbf{Hint:} Utilice el teorema del sandwich}
 \end{preguntas}
 \end{document}
