Solución de 2019/1/MAT1610/1

--- a/2019/1/MAT1610/1/solucion.tex
+++ b/2019/1/MAT1610/1/solucion.tex
@@ -118,15 +118,22 @@
 \begin{solucion}
 
 \begin{enumerate}[a)]
-\item 
-\item 
-\item 
+\item Como no se genera ninguna discontinuidad en $x = 5$, podemos evaluar de manera directa, es decir,
+$$\lim\limits_{x \ra 5} \dfrac{1}{x-5} = \dfrac{1}{5-5} = \dfrac{1}{0} = \infty = \not\exists$$
+\item Igual que en el caso anterior, podemos evaluar de manera directa en $x = 2$, con lo que
+$$\lim\limits_{x \ra 2} \dfrac{4x}{6-x} = \dfrac{4 \cdot 2}{6-2} = \dfrac{8}{4} = 2$$
+\item $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1} = \lim\limits_{x \ra -1} \dfrac{(x+1)(x^2-x+1)}{(x+1)(x-1)} = \lim\limits_{x \ra -1} \dfrac{(x^2-x+1)}{(x-1)} = \dfrac{1 + 1 + 1}{-1 -1} = -\dfrac{3}{2}$
 \item 
 \item 
 \item 
 \item 
 \item 
 \end{enumerate}
+\end{solucion}
+\item Determina $a$ para que el siguiente límite exista:
+$$ \lim\limits_{x \ra 2} \dfrac{x^2+ax+6}{x^2-4} $$
+\begin{solucion}
+
 \end{solucion}
 \item Aplicando la definición de límite, demostrar que
 $$\lim\limits_{x \ra 1} \dfrac{x+1}{2} = 2$$
@@ -135,7 +142,7 @@ $$\lim\limits_{x \ra 1} \dfrac{x+1}{2} = 2$$
 \end{solucion}
 \item Calcule el siguiente límite, en caso de que exista
 $$ \lim\limits_{x \ra 0} x^2e^{\sin{\frac{1}{x}}} $$
-\textbf{Hint:} \textit{Utilice el teorema del sandwich}
+\textit{\textbf{Hint:} Utilice el teorema del sandwich}
 \begin{solucion}
 
 \end{solucion}
