--- a/2019/1/MAT1610/1/solucion.tex
+++ b/2019/1/MAT1610/1/solucion.tex
@@ -118,14 +118,82 @@
 \begin{solucion}
 
 \begin{enumerate}[a)]
-\item Como no se genera ninguna discontinuidad en $x = 5$, podemos evaluar de manera directa, es decir,
+\item $\lim\limits_{x \ra 5} \dfrac{1}{x-5}$\\
+\\
+Al evaluar en $x = 5$, podemos ver que se genera una discontinuidad,
 $$\lim\limits_{x \ra 5} \dfrac{1}{x-5} = \dfrac{1}{5-5} = \dfrac{1}{0} = \infty = \not\exists$$
-\item Igual que en el caso anterior, podemos evaluar de manera directa en $x = 2$, con lo que
+Por lo tanto, concluimos que el límite no existe.
+\item $\lim\limits_{x \ra 2} \dfrac{4x}{6-x}$\\
+\\
+Como no se genera ninguna discontinuidad en $x = 2$, podemos evaluar directamente, obteniendo
 $$\lim\limits_{x \ra 2} \dfrac{4x}{6-x} = \dfrac{4 \cdot 2}{6-2} = \dfrac{8}{4} = 2$$
-\item $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1} = \lim\limits_{x \ra -1} \dfrac{(x+1)(x^2-x+1)}{(x+1)(x-1)} = \lim\limits_{x \ra -1} \dfrac{(x^2-x+1)}{(x-1)} = \dfrac{1 + 1 + 1}{-1 -1} = -\dfrac{3}{2}$
-\item 
-\item 
-\item 
+\item $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1}$\\
+\\
+Al evaluar en $x = -1$, podemos notar que obtendremos $\dfrac{0}{0}$, lo que no nos dice nada. Entonces, tenemos que buscar otra forma de evaluar el límite. Intentemos factorizar.
+$$\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1} = \lim\limits_{x \ra -1} \dfrac{(x+1)(x^2-x+1)}{(x+1)(x-1)} = \lim\limits_{x \ra -1} \dfrac{(x^2-x+1)}{(x-1)} = -\dfrac{3}{2}$$
+Al factorizar somos capaces de eliminar lo que nos generaba problemas y luego podemos evaluar directamente.
+\item $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$\\
+\\
+En este caso, nos ocurre algo similar al ejercicio anterior, sin embargo, no es tan sencillo la simplificación que debemos hacer. \\
+Para esto, utilicemos el método de la sustitución. Sea $u = \sqrt[]{4-x}$,\\
+Luego,
+$$x \ra 3$$
+$$-x \ra -3$$
+$$4-x \ra 1$$
+$$\sqrt[]{4-x} \ra 1$$
+$$u \ra 1$$
+Procedemos a escribir el límite en términos de $u$
+$$\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}
+= \lim\limits_{u \ra 1} \dfrac{u-1}{1-u^2} $$
+Ahora, resolvemos como siempre, es decir,
+$$\lim\limits_{u \ra 1} \dfrac{u-1}{1-u^2} 
+= \lim\limits_{u \ra 1} \dfrac{u-1}{(1+u)(1-u)}
+= \lim\limits_{u \ra 1} \dfrac{-(1-u)}{(1+u)(1-u)}
+= \lim\limits_{u \ra 1} \dfrac{-1}{(1+u)}
+= -\dfrac{1}{2}$$
+\item $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$\\
+\\
+En este caso podríamos utilizar sustitución como antes, pero dado que hay dos raices distintas, sería complicado. Por lo tanto, usaremos la técnica de la racionalización, esto es
+$$\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}
+=\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1} \cdot \dfrac{\sqrt[]{3-x}+1}{\sqrt[]{3-x}+1} 
+=\lim\limits_{x \ra 2} \dfrac{(\sqrt[]{6-x}-2)(\sqrt[]{3-x}+1)}{2-x} $$
+Ahora, como lo que nos da problemas es el parentesis izquierdo, usaremos la sustitución
+$$u = \sqrt[]{6-x} \Longrightarrow u \ra 2$$
+Con esto, obtenemos el límite
+$$\lim\limits_{u \ra 2} \dfrac{(u-2)(\sqrt[]{u^2-3}+1)}{u^2-4} 
+=\lim\limits_{u \ra 2} \dfrac{(u-2)(\sqrt[]{u^2-3}+1)}{(u+2)(u-2)} 
+=\lim\limits_{u \ra 2} \dfrac{\sqrt[]{u^2-3}+1}{u+2}
+=\dfrac{1}{2}$$
+\item $\lim\limits_{x \ra 1} \dfrac{x^4+2x^3-3x^2+4x-4}{x^4+2x-3}$\\
+\\
+Aquí podemos ver claramente que ambas partes del limite se hacen 0 en $x=1$. Sin embargo, al ser un polinomio de grado 4, se hace dificil factorizarlo \textit{al ojo}.\\
+Recordemos que por el Teorema del Resto, sabemos que si un polinomio $P(x)$ cumple con $P(a) = 0$, entonces $P(x)$ es divisible por $(x-a)$. Por lo tanto, ya sabemos que ambas partes son divisibles por $(x-1)$. Para factorizar entonces, podemos utilizar la división polinómica, dividiendo numerador y denominador por $(x-1)$.
+En primer lugar, hagamos $x^4+2x^3-3x^2+4x-4 : x-1$, es decir,
+\[
+\renewcommand\arraystretch{1.5}
+\setlength\doublerulesep{0pt}
+\begin{array}{rrrrrr}
+\multicolumn{1}{r|}{1} & 1 & 2 & -3 & 4 & -4\\\cline{2-6}
+& & 1& 3 & 0 & 4\\\cline{2-6}
+& 1 & 3& 0 & 4 & 0
+\end{array}
+\]
+por lo que $x^4+2x^3-3x^2+4x-4 : x-1 = x^3+3x^2+4$\\
+Luego, $x^4+2x-3 : x-1$, esto es,
+\[
+\renewcommand\arraystretch{1.5}
+\setlength\doublerulesep{0pt}
+\begin{array}{rrrrrr}
+\multicolumn{1}{r|}{1} & 1 & 0 & 0 & 2 & -3\\\cline{2-6}
+& & 1& 1 & 1 & 3\\\cline{2-6}
+& 1 & 1& 1 & 3 & 0
+\end{array}
+\]
+por lo que $x^4+2x-3 : x-1 = x^3+x^2+x+3$
+Entonces, podemos escribir el límite como
+$$\lim\limits_{x \ra 1} \dfrac{(x^3+3x^2+4)(x-1)}{(x^3+x^2+x+3)(x-1)}
+= \lim\limits_{x \ra 1} \dfrac{(x^3+3x^2+4)}{(x^3+x^2+x+3)}
+= \dfrac{8}{6} = \dfrac{4}{3}$$
 \item 
 \item 
 \end{enumerate}
@@ -138,7 +206,16 @@ $$ \lim\limits_{x \ra 2} \dfrac{x^2+ax+6}{x^2-4} $$
 \item Aplicando la definición de límite, demostrar que
 $$\lim\limits_{x \ra 1} \dfrac{x+1}{2} = 2$$
 \begin{solucion}
-
+Para demostrar el límite por definición, debemos demostrar que
+$$\left| \dfrac{x+3}{2} - 2 \right| < \epsilon \ra |x-1| < \delta$$
+para algún $\epsilon$ y $\delta$. Procedamos,
+$$\left| \dfrac{x+3}{2} - 2 \right| < \epsilon$$
+$$\left| \dfrac{x+3-4}{2} \right| < \epsilon$$
+$$\left| \dfrac{x-1}{2} \right| < \epsilon$$
+$$ \dfrac{|x-1|}{2} < \epsilon$$
+$$ |x-1| < 2\epsilon$$
+Luego, basta tomar $\delta = 2 \epsilon$ y se cumple la definición del límite. \\
+De sere necesario, se podría demostrar tomando un valor arbitrario suficientemente pequeño de $\epsilon$ y su correspondiente $\delta$
 \end{solucion}
 \item Calcule el siguiente límite, en caso de que exista
 $$ \lim\limits_{x \ra 0} x^2e^{\sin{\frac{1}{x}}} $$
