--- a/2019/1/MAT1203/1/solucion.tex
+++ b/2019/1/MAT1203/1/solucion.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 1}}
-\newcommand{\tituloayu}{Vectores, producto punto y producto cruz}
+\newcommand{\tituloayu}{Vectores, rectas y planos en el espacio}
 \newcommand{\fecha}{14 de marzo de 2019}
 \newcommand{\sigla}{MAT1203}
 \newcommand{\nombre}{Álgebra Lineal}
@@ -104,485 +104,5 @@
 \end{center}
 
 \begin{preguntas}
-\item Realiza las siguientes operaciones con los vectores dados
-	$$
-	v_1 = \begin{pmatrix}
-	1\\
-	7\\
-	8
-\end{pmatrix};\qquad
-	v_2 = \begin{pmatrix}
-	-4\\
-	2\\
-	-3
-\end{pmatrix}; \qquad
-	v_3 = \begin{pmatrix}
-	0\\
-	1\\
-	3
-\end{pmatrix}; \qquad
-	v_4 = \begin{pmatrix}
-	13\\
-	-3\\
-	1
-\end{pmatrix},
-	 $$
-\begin{tasks}(4)
-\task $v_1 + v_2$
-\task $v_3 - v_4$
-\task $v_2 \cdot v_3$
-\task $v_1 \times v_2$
-\task $v_2 \times v_1$
-\task $(v_1 \times v_2) \cdot v_2$
-\task $3 - ((2v_1) \cdot v_2)$
-\task $v_2 - v_3 \times v_1$
-\end{tasks}
-\begin{solucion}
-
-\begin{enumerate}[a)]
-\item  $v_1 + v_2 =\begin{pmatrix}
-				1\\
-				7\\
-				8
-				\end{pmatrix} + \begin{pmatrix}
-				-4\\
-				2\\
-				-3
-				\end{pmatrix} = \begin{pmatrix}
-				-3\\
-				9\\
-				5
-				\end{pmatrix}$
-\item $v_3 - v_4 = \begin{pmatrix}
-				0\\
-				1\\
-				3
-				\end{pmatrix} - \begin{pmatrix}
-				13\\
-				-3\\
-				1
-				\end{pmatrix} =  \begin{pmatrix}
-				-13\\
-				4\\
-				2
-				\end{pmatrix}$
-\item $v_2 \cdot v_3 = \begin{pmatrix}
-				-4\\
-				2\\
-				-3
-				\end{pmatrix} \cdot \begin{pmatrix}
-				0\\
-				1\\
-				3
-				\end{pmatrix} = -4 \cdot 0 + 2 \cdot 1 -3 \cdot 3 = -7$
-\item $v_1 \times v_2 = \begin{pmatrix}
-				1\\
-				7\\
-				8
-			\end{pmatrix} \times \begin{pmatrix}
-				-4\\
-				2\\
-				-3
-			\end{pmatrix} = i \left| \begin{matrix} 7 & 8 \\ 2 & -3\end{matrix} \right| - j \left| \begin{matrix} 1 & 8 \\ 4 & -3\end{matrix} \right| + k \left| \begin{matrix} 1 & 7 \\ -4 & 2\end{matrix} \right|$\\
-			$$= i (7 \cdot (-3) - 8 \cdot 2) - j (1 \cdot (-3) - 8 \cdot (-4)) + k (1 \cdot 2 - 7 \cdot(-4))$$
-			$$= i (-21 -16)) - j(-3--32) + k(2 - - 28)$$
-			$$-37 i - 29j + 30k = \begin{pmatrix}
-			-37\\
-			-29\\
-			30
-			\end{pmatrix}$$	
-\item $v_2 \times v_1 =  \begin{pmatrix}
-			-4\\
-			2\\
-			-3
-			\end{pmatrix} \times \begin{pmatrix}
-			1\\
-			7\\
-			8
-			\end{pmatrix} = i \left| \begin{matrix} 2 & -3 \\ 7 & 8\end{matrix} \right| - j \left| \begin{matrix} 4 & -3 \\ 1 & 8\end{matrix} \right| + k \left| \begin{matrix} -4 & 2 \\ 1 & 7\end{matrix} \right|$\\
-			$$= i (2 \cdot 8 - (-3) \cdot 7) - j ((-4)\cdot 8 - (-3)\cdot 1) + k ((-4) \cdot 7 -2 \cdot 1)$$
-			$$= i (16 --21) + j(-32 --3) + k(-28-2)$$
-			$$37 i + 29j - 30k = \begin{pmatrix}
-			37\\
-			29\\
-			-30
-			\end{pmatrix}$$	
-\item $(v_1 \times v_2) \cdot v_2 = \begin{pmatrix}
-			-37\\
-			-29\\
-			30
-			\end{pmatrix} \cdot \begin{pmatrix}
-			-4\\
-			2\\
-			-3
-			\end{pmatrix} = (-37) \cdot (-4) + (-29) \cdot 2 + 30 \cdot (-3)$
-			$$=148 +-58 - 90 = 0$$
-\item $3 - ((2v_1) \cdot v_2) = 3 - \left(\left(2\begin{pmatrix}
-			1\\
-			7\\
-			8
-			\end{pmatrix}\right) \cdot \begin{pmatrix}
-			-4\\
-			2\\
-			-3
-			\end{pmatrix}\right) = 3 - \left(\begin{pmatrix}
-			2\\
-			14\\
-			16
-			\end{pmatrix} \cdot \begin{pmatrix}
-			-4\\
-			2\\
-			-3
-			\end{pmatrix}\right)$
-			$$ = 3 - (2 \cdot (-4) + 14 \cdot 2 + 16 \cdot (-3))$$
-			$$3 - (-8 + 28 -48)$$
-\item $v_2 - v_3 \times v_1 = \begin{pmatrix}
-			-4\\
-			2\\
-			-3
-			\end{pmatrix} -  \begin{pmatrix}
-			0\\
-			1\\
-			3
-			\end{pmatrix} \times  \begin{pmatrix}
-			1\\
-			7\\
-			8
-			\end{pmatrix}$
-			$$= -4i + 2j -3k - (i (8 - 21))- j(0 - 3) + k (0-1))$$
-			$$ = -4i + 2j -3k +13i - 3j +k = 9i - j -2k $$
-			$$ =\begin{pmatrix}
-			9\\
-			-1\\
-			-2
-			\end{pmatrix}$$
-\end{enumerate}
-\end{solucion}
-\item Verificar si los siguientes puntos son o no colineares entre si
-\begin{tasks}(2)
-\task $ 
-\begin{pmatrix}
-	3\\
-	2\\
-	5
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	0\\
-	1/2\\
-	-1
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	5\\
-	3\\
-	9
-\end{pmatrix}$
-\task $ 
-\begin{pmatrix}
-	1\\
-	1\\
-	4
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	-2\\
-	-3\\
-	-8
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	4\\
-	4\\
-	16
-\end{pmatrix}$
-\end{tasks}
-\begin{solucion}
-
-\begin{enumerate}[a)]
-\item $ 
-			\begin{pmatrix}
-			3\\
-			2\\
-			5
-			\end{pmatrix}; \quad
-			\begin{pmatrix}
-			0\\
-			1/2\\
-			-1
-			\end{pmatrix}; \quad
-			\begin{pmatrix}
-			5\\
-			3\\
-			9
-			\end{pmatrix}$\\
-			En primer lugar, debemos encontrar dos vectores directores entre dos pares de vectores distintos
-			$$d_1 = \begin{pmatrix}
-			3\\
-			2\\
-			5
-			\end{pmatrix} - 
-			\begin{pmatrix}
-			0\\
-			1/2\\
-			-1
-			\end{pmatrix} = \begin{pmatrix}
-			3\\
-			3/2\\
-			6
-			\end{pmatrix}$$
-			$$d_2 = \begin{pmatrix}
-			3\\
-			2\\
-			5
-			\end{pmatrix} - 
-			\begin{pmatrix}
-			5\\
-			3\\
-			9
-			\end{pmatrix} = \begin{pmatrix}
-			-2\\
-			-1\\
-			-4
-			\end{pmatrix}$$
-			Dado que es posible representar $d_1$ de la forma $d_1 = \lambda d_2$, con $\lambda = -1,5$, los puntos son colineales.
-\item $ 
-			\begin{pmatrix}
-			1\\
-			1\\
-			4
-			\end{pmatrix}; \quad
-			\begin{pmatrix}
-			-2\\
-			-3\\
-			-8
-			\end{pmatrix}; \quad
-			\begin{pmatrix}
-			4\\
-			4\\
-			16
-			\end{pmatrix}$\\
-			Igual que antes, buscaremos dos vectores directores
-			$$d_1 = \begin{pmatrix}
-			1\\
-			1\\
-			4
-			\end{pmatrix} - 
-			\begin{pmatrix}
-			-2\\
-			-3\\
-			-8
-			\end{pmatrix} = \begin{pmatrix}
-			3\\
-			4\\
-			12
-			\end{pmatrix}$$
-			$$d_2 = \begin{pmatrix}
-			1\\
-			1\\
-			4
-			\end{pmatrix} - 
-			\begin{pmatrix}
-			4\\
-			4\\
-			16
-			\end{pmatrix} = \begin{pmatrix}
-			-3\\
-			-3\\
-			-12
-			\end{pmatrix}$$
-			Observando las dos primeras componentes de cada vector, vemos que es imposible representar uno en función del otro, por lo que los puntos no son colineales
-\end{enumerate}
-\end{solucion}
-\item Sean los vectores
-		$$
-	v_1 = \begin{pmatrix}
-	2\\
-	1\\
-	5
-\end{pmatrix};\qquad
-	v_2 = \begin{pmatrix}
-	-1\\
-	-3\\
-	0
-\end{pmatrix}$$
-\begin{enumerate}[a)]
-\item Buscar un vector $v_3$ que sea perpendicular a $v_1$ y $v_2$ y verificar que efectivamente sea perpendicular a ambos.
-\item Buscar un vector paralelo a $(v_2-v_3)$ y verificar que lo sea
-\item Encontrar un vector perpendicular a $(v_3 + 3v_1)$
-\end{enumerate}
-\begin{solucion}
-
-\begin{enumerate}[a)]
-\item Para que sea perpendicular a ambos, basta definir $v_3 = v_1 \times v_2$, es decir
-			$$v_3 = \begin{pmatrix}
-			2\\
-			1\\
-			5
-			\end{pmatrix} \times \begin{pmatrix}
-			-1\\
-			-3\\
-			0
-			\end{pmatrix} = i (0 + 15) + j (0 + 5) + k(-6 + 1) =\begin{pmatrix}
-			15\\
-			-5\\
-			-5
-			\end{pmatrix} $$
-			Para verificar basta utilizar el producto punto, donde obtendremos que
-			$$v_3 \cdot v_1 = 0$$
-			$$v_3 \cdot v_2 = 0$$
-\item En primer lugar, calculemo el vector $v_2 - v_3$
-			$$v_4 = v_2 - v_3 = \begin{pmatrix}
-			-1\\
-			-3\\
-			0
-			\end{pmatrix} - \begin{pmatrix}
-			15\\
-			-5\\
-			-5
-			\end{pmatrix} = \begin{pmatrix}
-			-16\\
-			2\\
-			5
-			\end{pmatrix}$$
-			Para obtener un vector paralelo, podemos simplemente ponderar el vector por un escalar, como por ejemplo, 2
-			$$v_5 = 2 v_4 = 2 \begin{pmatrix}
-			-16\\
-			2\\
-			5
-			\end{pmatrix} = \begin{pmatrix}
-			-32\\
-			4\\
-			10
-			\end{pmatrix}$$
-			Para verificar utilizaremos el producto cruz, donde obtendremos que
-			$$v_5 \times v_4 = 0$$
-\item Primero calculemos el vector $v_3 + 3v_1$
-			$$v_6 = v_3 + 3v_1 = \begin{pmatrix}
-			15\\
-			-5\\
-			-5
-			\end{pmatrix}  + 3 \begin{pmatrix}
-			2\\
-			1\\
-			5
-			\end{pmatrix} = \begin{pmatrix}
-			21\\
-			-2\\
-			10
-			\end{pmatrix} $$
-			Para obtener un vector perpendicular, podemos hacer producto cruz con cualquier otro vector arbitrario. Para hacer los calculos simples, utilizaremos
-			$$v_7 = \begin{pmatrix}
-			1\\
-			0\\
-			0
-			\end{pmatrix} $$
-			Luego, 
-			$$v_8 = v_6 \times v_7 = \begin{pmatrix}
-			21\\
-			-2\\
-			10
-			\end{pmatrix} \times \begin{pmatrix}
-			1\\
-			0\\
-			0
-			\end{pmatrix} = 10j + 2k = \begin{pmatrix}
-			0\\
-			-10\\
-			2
-			\end{pmatrix}$$
-\end{enumerate}
-\end{solucion}
-\item Detereminar si los siguientes vectores son paralelos, perpendiculares u oblicuos
-\begin{tasks}(2)
-\task $$ 
-			\begin{pmatrix}
-			-1\\
-			2\\
-			5
-		\end{pmatrix};\qquad
-			\begin{pmatrix}
-			2\\
-			-4\\
-			-10
-		\end{pmatrix}$$
-\task  $$ 
-			\begin{pmatrix}
-			2\\
-			5\\
-			10
-		\end{pmatrix};\qquad
-			\begin{pmatrix}
-			-3\\
-			8\\
-			-11
-		\end{pmatrix}$$
-\end{tasks}
-\begin{solucion}
-
-\begin{enumerate}[a)]
-\item $$ 
-			\begin{pmatrix}
-			-1\\
-			2\\
-			5
-			\end{pmatrix};\qquad
-			\begin{pmatrix}
-			2\\
-			-4\\
-			-10
-			\end{pmatrix}$$
-			Si se fijan, es evidente que $v_2 = -2v_1$, por lo que comprobaremos de inmediato con el producto cruz para ver si son paralelos
-			 $$ 
-			\begin{pmatrix}
-			-1\\
-			2\\
-			5
-			\end{pmatrix} \times 
-			\begin{pmatrix}
-			2\\
-			-4\\
-			-10
-			\end{pmatrix} = i (-20 + 20) -j (10 - 10) + k (4 - 4) = \vec{0}$$
-			Por lo que ambos vectores son paralelos
-\item $$ 
-			\begin{pmatrix}
-			2\\
-			5\\
-			10
-			\end{pmatrix};\qquad
-			\begin{pmatrix}
-			-3\\
-			8\\
-			-11
-			\end{pmatrix}$$
-			Comenzaremo probando si son perpendiculares con el producto punto
-			$$ 
-			\begin{pmatrix}
-			2\\
-			5\\
-			10
-			\end{pmatrix} \cdot
-			\begin{pmatrix}
-			-3\\
-			8\\
-			-11
-			\end{pmatrix} = -6 + 40 - 110 = -76$$
-			Como es distinto de cero, vemos que no son perpendiculares.\\
-			Ahora, utilizaremos el producto cruz para ver si son paralelos
-			$$ 
-			\begin{pmatrix}
-			2\\
-			5\\
-			10
-			\end{pmatrix} \times
-			\begin{pmatrix}
-			-3\\
-			8\\
-			-11
-			\end{pmatrix} = i(-55 -80) - j (-22 +30) +k(16 + 15) = \begin{pmatrix}
-			-135\\
-			-8\\
-			31
-			\end{pmatrix}$$
-			Como este no es el vector nulo, tampoco son paralelos. Con esto concluimos que ambos vectores son oblicuos.
-\end{enumerate}
-\end{solucion}
 \end{preguntas}
 \end{document}
