--- a/2019/1/MAT1203/1/enunciado.tex
+++ b/2019/1/MAT1203/1/enunciado.tex
@@ -190,5 +190,9 @@
 \item Encontrar un vector perpendicular a $(v_3 + 3v_1)$
 \end{enumerate}
 \item Determinar el plano que pasa por los puntos $P_1(4,-1,-2)$, $P_2(0,0,1)$ y $P_3(2,-3,0)$.
+\item Dado $P_1(0,2,-3)$ y $P_2(1,0,3)$, determinar la recta que pasa por $P_1$ y $P_2$.
+\item Encontrar las ecuaciones de dos planos diferentes cuya intersección sea la recta que pasa por el punto $P_1(1,3,-2)$ y $P_2(2,0,4)$.
+\item Encontrar un plano que sea perpendicular al plano cuya ecuación es $3x -7y +2z = 5$ y que pase por el punto $P(0,2,-1)$
+\item Determinar la ecuación de un plano que pase por $P(4,2,1)$ y que sea paralelo al plano de ecuación $2x-5y+z=6$
 \end{preguntas}
 \end{document}
