--- a/2019/1/MAT1203/1/enunciado.tex
+++ b/2019/1/MAT1203/1/enunciado.tex
@@ -194,5 +194,14 @@
 \item Encontrar las ecuaciones de dos planos diferentes cuya intersección sea la recta que pasa por el punto $P_1(1,3,-2)$ y $P_2(2,0,4)$.
 \item Encontrar un plano que sea perpendicular al plano cuya ecuación es $3x -7y +2z = 5$ y que pase por el punto $P(0,2,-1)$
 \item Determinar la ecuación de un plano que pase por $P(4,2,1)$ y que sea paralelo al plano de ecuación $2x-5y+z=6$
+\item Sean $a=\left<\begin{array}{r}
+      1\\-1\\1
+    \end{array}\right>$ y $b=\left<\begin{array}{r}
+      0\\-1\\2
+    \end{array}\right>$
+\begin{enumerate}[a)]
+\item Calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
+\item Demuestre que si $a$ y $b\in\R^3$ el vector $b-proy_a b$ es ortogonal a $a$.
+\end{enumerate}
 \end{preguntas}
 \end{document}
