Solución de 2019/1/MAT1203/1

--- a/2019/1/MAT1203/1/solucion.tex
+++ b/2019/1/MAT1203/1/solucion.tex
@@ -624,5 +624,21 @@ De forma análoga, para que dos planos sean paralelos, basta con que sus vectore
 		Luego, el plano buscado es
 		$$\Pi: 2x - 5y + z = -1$$
 \end{solucion}
+\item Sean $a=\left<\begin{array}{r}
+      1\\-1\\1
+    \end{array}\right>$ y $b=\left<\begin{array}{r}
+      0\\-1\\2
+    \end{array}\right>$
+\begin{enumerate}[a)]
+\item Calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
+\item Demuestre que si $a$ y $b\in\R^3$ el vector $b-proy_a b$ es ortogonal a $a$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
