--- a/2019/1/MAT1203/1/solucion.tex
+++ b/2019/1/MAT1203/1/solucion.tex
@@ -624,9 +624,9 @@ De forma análoga, para que dos planos sean paralelos, basta con que sus vectore
 		Luego, el plano buscado es
 		$$\Pi: 2x - 5y + z = -1$$
 \end{solucion}
-\item Sean $a=\left<\begin{array}{r}
+\item Sean $a=\left(\begin{array}{r}
       1\\-1\\1
-    \end{array}\right>$ y $b=\left<\begin{array}{r}
+    \end{array}\right)$ y $b=\left<\begin{array}{r}
       0\\-1\\2
     \end{array}\right>$
 \begin{enumerate}[a)]
