Enunciado de 2019/1/MAT1203/1

--- a/2019/1/MAT1203/1/enunciado.tex
+++ b/2019/1/MAT1203/1/enunciado.tex
@@ -196,9 +196,9 @@
 \item Determinar la ecuación de un plano que pase por $P(4,2,1)$ y que sea paralelo al plano de ecuación $2x-5y+z=6$
 \item Sean $a=\left(\begin{array}{r}
       1\\-1\\1
-    \end{array}\right)$ y $b=\left<\begin{array}{r}
+    \end{array}\right)$ y $b=\left(\begin{array}{r}
       0\\-1\\2
-    \end{array}\right>$
+    \end{array}\right)$
 \begin{enumerate}[a)]
 \item Calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
 \item Demuestre que si $a$ y $b\in\R^3$ el vector $b-proy_a b$ es ortogonal a $a$.
