--- a/2019/1/MAT1203/1/solucion.tex
+++ b/2019/1/MAT1203/1/solucion.tex
@@ -626,9 +626,9 @@ De forma análoga, para que dos planos sean paralelos, basta con que sus vectore
 \end{solucion}
 \item Sean $a=\left(\begin{array}{r}
       1\\-1\\1
-    \end{array}\right)$ y $b=\left<\begin{array}{r}
+    \end{array}\right)$ y $b=\left(\begin{array}{r}
       0\\-1\\2
-    \end{array}\right>$
+    \end{array}\right)$
 \begin{enumerate}[a)]
 \item Calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
 \item Demuestre que si $a$ y $b\in\R^3$ el vector $b-proy_a b$ es ortogonal a $a$.
