--- a/2019/1/MAT1203/1/enunciado.tex
+++ b/2019/1/MAT1203/1/enunciado.tex
@@ -139,38 +139,8 @@
 \end{tasks}
 \item Verificar si los siguientes puntos son o no colineares entre si
 \begin{tasks}(2)
-\task $ 
-\begin{pmatrix}
-	3\\
-	2\\
-	5
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	0\\
-	1/2\\
-	-1
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	5\\
-	3\\
-	9
-\end{pmatrix}$
-\task $ 
-\begin{pmatrix}
-	1\\
-	1\\
-	4
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	-2\\
-	-3\\
-	-8
-\end{pmatrix}; \quad
-\begin{pmatrix}
-	4\\
-	4\\
-	16
-\end{pmatrix}$
+\task $P(3,2,5), \ P(0, 1/2, -1), \ P(5, 3, 9)$
+\task $P(1,1,4), \ P(-2,-3.-8), \ P(4,4,16)$
 \end{tasks}
 \item Sean los vectores
 		$$
@@ -194,13 +164,13 @@
 \item Encontrar las ecuaciones de dos planos diferentes cuya intersección sea la recta que pasa por el punto $P_1(1,3,-2)$ y $P_2(2,0,4)$.
 \item Encontrar un plano que sea perpendicular al plano cuya ecuación es $3x -7y +2z = 5$ y que pase por el punto $P(0,2,-1)$
 \item Determinar la ecuación de un plano que pase por $P(4,2,1)$ y que sea paralelo al plano de ecuación $2x-5y+z=6$
+\item 
+\begin{enumerate}[a)]
 \item Sean $a=\left(\begin{array}{r}
       1\\-1\\1
     \end{array}\right)$ y $b=\left(\begin{array}{r}
       0\\-1\\2
-    \end{array}\right)$
-\begin{enumerate}[a)]
-\item Calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
+    \end{array}\right)$, calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
 \item Demuestre que si $a$ y $b\in\R^3$ el vector $b-proy_a b$ es ortogonal a $a$.
 \end{enumerate}
 \end{preguntas}
