--- a/2019/1/MAT1203/1/solucion.tex
+++ b/2019/1/MAT1203/1/solucion.tex
@@ -389,7 +389,7 @@
 			-1\\
 			-3\\
 			0
-			\end{pmatrix} = i (0 + 15) + j (0 + 5) + k(-6 + 1) =\begin{pmatrix}
+			\end{pmatrix} = i (0 + 15) - j (0 + 5) + k(-6 + 1) =\begin{pmatrix}
 			15\\
 			-5\\
 			-5
@@ -397,7 +397,7 @@
 			Para verificar basta utilizar el producto punto, donde obtendremos que
 			$$v_3 \cdot v_1 = 0$$
 			$$v_3 \cdot v_2 = 0$$
-\item En primer lugar, calculemo el vector $v_2 - v_3$
+\item En primer lugar, calculemos el vector $v_2 - v_3$
 			$$v_4 = v_2 - v_3 = \begin{pmatrix}
 			-1\\
 			-3\\
@@ -454,7 +454,7 @@
 			0
 			\end{pmatrix} = 10j + 2k = \begin{pmatrix}
 			0\\
-			-10\\
+			10\\
 			2
 			\end{pmatrix}$$
 \end{enumerate}
@@ -639,9 +639,8 @@ $$(b-proy_a b) \cdot a = 0 $$
 Desarrollando,
 $$\left(b-\dfrac{b \cdot a}{|a|^2}a\right) \cdot a = 0 $$
 $$b \cdot a -\dfrac{b \cdot a}{|a|^2}a \cdot a = 0 $$
-Sea $\alpha$ el ángulo que se genera entre $a$ y $b$, utilizando la definición del producto punto tenemos,
-$$|b||a|\cos\alpha -\dfrac{|b||a|\cos\alpha}{|a|^2}|a|^2  = 0 $$
-$$|b||a|\cos\alpha -|b||a|\cos\alpha  = 0 $$
+$$b \cdot a -\dfrac{b \cdot a}{|a|^2}|a|^2 = 0 $$
+$$b \cdot a -b \cdot a = 0 $$
 $$0 = 0$$
 $$\blacksquare$$
 \end{enumerate}
