Solución de 2019/1/MAT1610/2

--- a/2019/1/MAT1610/2/solucion.tex
+++ b/2019/1/MAT1610/2/solucion.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 2}}
-\newcommand{\tituloayu}{Límites trigonométricos}
+\newcommand{\tituloayu}{Límites trigonométricos y continuidad}
 \newcommand{\fecha}{19 de marzo de 2019}
 \newcommand{\sigla}{MAT1610}
 \newcommand{\nombre}{Cálculo I}
@@ -104,5 +104,21 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcule los siguientes límites, en caso de que existan
+\begin{enumerate}[a)]
+\item $\lim\limits_{x \ra 0} \dfrac{\tan x}{x}$ 
+\item $\lim\limits_{x \ra 0} \dfrac{\sin 3x}{5x}$ 
+\item $\lim\limits_{x \ra 0} \dfrac{1 - \sqrt[]{\cos x}}{x^2}$ 
+\item $\lim\limits_{x \ra \frac{\pi}{2}} \left(\dfrac{\pi}{2} - x \right) \tan x$ 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
