--- a/2019/1/MAT1610/2/enunciado.tex
+++ b/2019/1/MAT1610/2/enunciado.tex
@@ -110,6 +110,13 @@
 \item $\lim\limits_{x \ra 0} \dfrac{\sin 3x}{5x}$ 
 \item $\lim\limits_{x \ra 0} \dfrac{1 - \sqrt[]{\cos x}}{x^2}$ 
 \item $\lim\limits_{x \ra \frac{\pi}{2}} \left(\dfrac{\pi}{2} - x \right) \tan x$ 
+\item $\lim\limits_{x \ra \pi} \dfrac{(x - \pi)^2}{\sin ^2 x}$ 
+\end{enumerate}
+\item Analice las discontinuidades de la función
+$$ f(x) = \dfrac{\sin(\pi(x+1))}{x-x^2} $$
+determinando si son removibles
+\begin{enumerate}[a)]
+\item 
 \end{enumerate}
 \end{preguntas}
 \end{document}
