Enunciado de 2019/1/MAT1610/2

--- a/2019/1/MAT1610/2/enunciado.tex
+++ b/2019/1/MAT1610/2/enunciado.tex
@@ -118,5 +118,6 @@ determinando si son removibles
 \begin{enumerate}[a)]
 \item 
 \end{enumerate}
+\item Determina el valor de la constante $a$ para que la función $f(x)$ sea continua $\forall x \in \R$
 \end{preguntas}
 \end{document}
