Solución de 2019/1/MAT1610/2

--- a/2019/1/MAT1610/2/solucion.tex
+++ b/2019/1/MAT1610/2/solucion.tex
@@ -134,5 +134,9 @@ determinando si son removibles
 \item 
 \end{enumerate}
 \end{solucion}
+\item Determina el valor de la constante $a$ para que la función $f(x)$ sea continua $\forall x \in \R$
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
