--- a/2019/1/MAT1610/2/solucion.tex
+++ b/2019/1/MAT1610/2/solucion.tex
@@ -105,16 +105,18 @@
 
 \begin{preguntas}
 \item Calcule los siguientes límites, en caso de que existan
-\begin{enumerate}[a)]
-\item $\lim\limits_{x \ra 0} \dfrac{\tan x}{x}$ 
-\item $\lim\limits_{x \ra 0} \dfrac{\sin 3x}{5x}$ 
-\item $\lim\limits_{x \ra 0} \dfrac{1 - \sqrt[]{\cos x}}{x^2}$ 
-\item $\lim\limits_{x \ra \frac{\pi}{2}} \left(\dfrac{\pi}{2} - x \right) \tan x$ 
-\item $\lim\limits_{x \ra \pi} \dfrac{(x - \pi)^2}{\sin ^2 x}$ 
-\end{enumerate}
+\begin{tasks}(2)
+\task $\lim\limits_{x \ra 0} \dfrac{\tan x}{x}$ 
+\task $\lim\limits_{x \ra 0} \dfrac{\sin 3x}{5x}$ 
+\task $\lim\limits_{x \ra 0} \dfrac{\tan x}{\sin 4x}$ 
+\task $\lim\limits_{x \ra 0} \dfrac{1 - \sqrt[]{\cos x}}{x^2}$ 
+\task $\lim\limits_{x \ra \frac{\pi}{2}} \left(\dfrac{\pi}{2} - x \right) \tan x$ 
+\task $\lim\limits_{x \ra \pi} \dfrac{(x - \pi)^2}{\sin ^2 x}$ 
+\end{tasks}
 \begin{solucion}
 
 \begin{enumerate}[a)]
+\item 
 \item 
 \item 
 \item 
@@ -134,7 +136,13 @@ determinando si son removibles
 \item 
 \end{enumerate}
 \end{solucion}
-\item Determina el valor de la constante $a$ para que la función $f(x)$ sea continua $\forall x \in \R$
+\item Sea 
+$$f(x) = \begin{cases}
+3x - 2 & x \leq 2\\
+ax+b & 2 < x < 3 \\
+2b-3ax & x \geq 3
+\end{cases}$$
+Determina el valor de las constantes $a$ y $b$ para que la función $f(x)$ sea continua $\forall x \in \R$
 \begin{solucion}
 
 \end{solucion}
