Enunciado de 2019/1/MAT1610/2

--- a/2019/1/MAT1610/2/enunciado.tex
+++ b/2019/1/MAT1610/2/enunciado.tex
@@ -123,6 +123,6 @@ ax+b & 2 < x < 3 \\
 2b-3ax & x \geq 3
 \end{cases}$$
 Determina el valor de las constantes $a$ y $b$ para que la función $f(x)$ sea continua $\forall x \in \R$
-\item Sean $f(x)$ y $g(x)$ functiones continuas en el intervalo $[0, 1]$, tal que $f(0)=0$, $f(1)=1$, $g(0)=1$ y $g(1)=0$, demuestre que existe algun $c \in [0,1]$ tal que $f(c) = g(c)$.
+\item Sean $f(x)$ y $g(x)$ funciones continuas en el intervalo $[0, 1]$, tal que $f(0)=0$, $f(1)=1$, $g(0)=1$ y $g(1)=0$, demuestre que existe algun $c \in [0,1]$ tal que $f(c) = g(c)$.
 \end{preguntas}
 \end{document}
