--- a/2019/1/MAT1610/2/solucion.tex
+++ b/2019/1/MAT1610/2/solucion.tex
@@ -140,7 +140,7 @@ Determina el valor de las constantes $a$ y $b$ para que la función $f(x)$ sea c
 \begin{solucion}
 
 \end{solucion}
-\item Sean $f(x)$ y $g(x)$ functiones continuas en el intervalo $[0, 1]$, tal que $f(0)=0$, $f(1)=1$, $g(0)=1$ y $g(1)=0$, demuestre que existe algun $c \in [0,1]$ tal que $f(c) = g(c)$.
+\item Sean $f(x)$ y $g(x)$ funciones continuas en el intervalo $[0, 1]$, tal que $f(0)=0$, $f(1)=1$, $g(0)=1$ y $g(1)=0$, demuestre que existe algun $c \in [0,1]$ tal que $f(c) = g(c)$.
 \begin{solucion}
 
 \end{solucion}
