--- a/2019/1/MAT1610/2/solucion.tex
+++ b/2019/1/MAT1610/2/solucion.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 2}}
-\newcommand{\tituloayu}{Límites trigonométricos y continuidad}
+\newcommand{\tituloayu}{Límites trigonométricos, continuidad y TVI}
 \newcommand{\fecha}{19 de marzo de 2019}
 \newcommand{\sigla}{MAT1610}
 \newcommand{\nombre}{Cálculo I}
