--- a/2018/1/MAT1203/2/enunciado.tex
+++ b/2018/1/MAT1203/2/enunciado.tex
@@ -105,6 +105,7 @@
 
 \begin{preguntas}
 \item Determinar el plano que pasa por los puntos $P_1(4,-1,-2)$, $P_2(0,0,1)$ y $P_3(2,-3,0)$.
+\item Dado $P_1(0,2,-3)$ y $P_2(1,0,3)$, determinar la recta que pasa por $P_1$ y $P_2$.
 \item Encontrar las ecuaciones de dos planos diferentes cuya intersección sea la recta que pasa por el punto $P_1(1,3,-2)$ y $P_2(2,0,4)$.
 \end{preguntas}
 \end{document}
