Solución de 2018/1/MAT1203/2

--- a/2018/1/MAT1203/2/solucion.tex
+++ b/2018/1/MAT1203/2/solucion.tex
@@ -141,6 +141,13 @@ Sabemos que un plano se define de la forma
 		Finalmente, el plano es
 		$$\Pi:4x + y + 5z = 5$$
 \end{solucion}
+\item Dado $P_1(0,2,-3)$ y $P_2(1,0,3)$, determinar la recta que pasa por $P_1$ y $P_2$.
+\begin{solucion}
+Buscamos un vector director
+		$$\vec{d} = P_2 - P_1 = (1, -2, 0)$$
+		Luego, la recta que pasa por $P_1$ y $P_2$ esta definida por
+		$$<x,y,z> = (0, 2, -3) + \lambda (1,-2,0)$$
+\end{solucion}
 \item Encontrar las ecuaciones de dos planos diferentes cuya intersección sea la recta que pasa por el punto $P_1(1,3,-2)$ y $P_2(2,0,4)$.
 \begin{solucion}
 Para realizar esto, basta con utilizar dos trios de puntos que contengan a los dos puntos dados y buscar dos planos. La intersección entre estos planos será la recta que pasa por ambos puntos. Para esto, definiremos puntos arbitrarios.\\
